fix: spacing in smaller screens

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -11,6 +11,9 @@
   --header-height: 4rem;
   --footer-height: calc(100vh - var(--grid-height) - var(--header-height));
 
+  --title-offset: -7.1rem;
+  --grid-margin: 3rem;
+
   --size-0: 0.85rem;
   --size-1: 1rem;
   --size-2: 1.1rem;
@@ -29,6 +32,9 @@
     --size-4: 1.5rem;
     --size-5: 2rem;
     --size-6: 3rem;
+
+    --title-offset: -5rem;
+    --grid-margin: 1rem;
   }
 }
 
